 * Added a z3 module and an alias for BBB (Ploneboard).
   [alecm]

 * Updated thirdparty/icalendar to version iCalendar-0.11. Dropped the
   svn:external to codespeak SVN. This has the side-effect of ridding us
   of the annoying test failure with the Zope 2.9 testrunner which would
   pick up the icalendar tests even though they are neither importable nor
   pass in this setting.
   [stefan]

1.1.0-beta1
===========

 * Integrated ftests into normal tests. Removed dependency on Archetypes tests.
   [hannosch]

 * Update transaction imports, remove subtransaction usage, use python logger
   everywhere, other deprecation related cleanup, whitespace cleanup.
   [alecm]

 * Use KeywordWidget for eventType.
   [fschulze]

 * Body of news items and event types can be empty now.
   [fschulze]

1.1.0-alpha2 2006-02-22
=======================

 * Reorganized z3 interfaces into the interface package, created a complete
   set of z3 interfaces, as well as tests for those interfaces.
   [jfroche, russf]

 * Added some adapters and views for exporting Folders and Documents (and
   other types, given additional configuration) as zip files.
   [jfroche, russf]

1.1.0-alpha1 2006-01-26
=======================

 * make trunk compatible with cmf > 1.5, by changing references to
   cmfcore.permissions and removing use of format_stx
   [k_vertigo, hannosch]

1.0.4-devel unreleased
======================

 * Made manage_afterPUT and manage_afterMKCOL use PATH_INFO to get at
   the original id for usage in the Title, so that in a WebDAV
   name-mangling environment the Title gets set to the original
   filename.
   [sidnei]

 * Added test for ATFolder and ATBTreeFolder MKCOL.
   [sidnei]

 * Made manage_afterPUT and manage_afterMKCOL use PATH_INFO to get at
   the original id for usage in the Title, so that in a WebDAV
   name-mangling environment the Title gets set to the original
   filename.
   [sidnei]

 * Added test for ATFolder and ATBTreeFolder MKCOL.
   [sidnei]
